# clouder

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  EMBED_IMPLEMENTATION.md  LICENSE  README.md  bot_requirements.md  build_and_run.sh  buildnrun.sh  checklist.md
.github/workflows/: wiki.yml
clouder-core/: Cargo.toml  README.md
clouder-core/migrations/: 001_initial.sql  002_reminders.sql  003_welcome_goodbye.sql  004_mediaonly.sql  005_uwufy.sql  006_selfrole_labels.sql  007_dashboard_users.sql  008_fix_reminder_unique.sql  009_custom_reminders.sql  010_dashboard_users_security.sql  010_guild_cache_permissions.sql  011_guild_cache_ttl.sql  012_drop_legacy_api_key.sql  013_dashboard_users_api_key_ciphertext.sql  tables.md
clouder-core/src/: config.rs  crypto.rs  lib.rs
clouder-core/src/database/: dashboard_sessions.rs  dashboard_users.rs  guild_cache.rs  guild_configs.rs  mediaonly.rs  mod.rs  reminders.rs  selfroles.rs  uwufy.rs  welcome_goodbye.rs
clouder-core/src/shared/: mod.rs  models.rs
clouder-core/src/utils/: content_detection.rs  mod.rs  welcome_goodbye.rs
clouder-llm/: Cargo.toml  README.md
clouder-llm/src/: lib.rs  openai.rs
clouder-web/: Cargo.toml  README.md
clouder-web/src/: api.rs  auth.rs  dashboard.rs  lib.rs  session.rs
clouder-web/static/: app.js  style.css
clouder-web/templates/: about.html  login.html  mediaonly.html  profile.html  reminders.html  selfroles.html  servers.html  uwufy.html  welcome_goodbye.html
data/: db.sqlite
llm/: Cargo.toml
llm/src/: lib.rs  openai.rs
migrations/: 001_initial.sql  002_reminders.sql  003_welcome_goodbye.sql  004_mediaonly.sql
shared/: Cargo.toml
src/: config.rs  lib.rs  logging.rs  main.rs  scheduler.rs
src/commands/: about.rs  channel.rs  github.rs  github_trending.rs  help.rs  huggingface.rs  mediaonly.rs  mod.rs  purge.rs  random.rs  reminders.rs  selfroles.rs  tinyfox.rs  uwufy.rs  video.rs
src/database/: mediaonly.rs  mod.rs  selfroles.rs  welcome_goodbye.rs
src/events/: bot_mentioned.rs  mediaonly_handler.rs  member_events.rs  message_handler.rs  mod.rs  selfroles.rs
src/shared/: mod.rs  models.rs
src/tests/: about_tests.rs  channel_tests.rs  commands_tests.rs  commands_tests_backup.rs  config_tests.rs  config_tests_backup.rs  database_tests.rs  database_tests_backup.rs  events_tests.rs  events_tests_backup.rs  github_tests.rs  help_tests.rs  huggingface_tests.rs  mediaonly_tests.rs  mod.rs  purge_tests.rs  reminders_tests.rs  session_extractor_tests.rs  shared_tests.rs  utils_tests.rs  utils_tests_old.rs  uwufy_tests.rs  video_tests.rs  web_tests.rs  web_tests_backup.rs  welcome_goodbye_tests.rs
src/utils/: content_detection.rs  embed.rs  mod.rs  video.rs  welcome_goodbye.rs
src/web/: auth.rs  dashboard.rs  embed.rs  mediaonly.rs  middleware.rs  mod.rs  models.rs  session.rs  session_extractor.rs  welcome_goodbye.rs
src/web/static/css/: auth.css  common.css  dashboard.css
src/web/static/js/: common.js  selfroles.js
src/web/templates/: debug_sessions.html  feature_request.html  guild_dashboard.html  login.html  mediaonly_config.html  selfroles_create.html  selfroles_dashboard.html  selfroles_edit.html  selfroles_form.html  selfroles_list.html  server_list.html  video_preview.html  welcome_goodbye_config.html
src/web/templates/partials/: guild_card.html
web/: Cargo.toml
web/src/: auth.rs  config.rs  dashboard.rs  lib.rs  middleware.rs  models.rs
web/static/css/: common.css  dashboard.css
web/static/js/: selfroles.js  selfroles_config.js
web/templates/: feature_request.html  guild_dashboard.html  selfroles_form.html  selfroles_list.html  server_list.html
web/templates/partials/: guild_card.html  guild_load_error.html  no_manageable_servers.html
wiki/: Architecture.md  Commands.md  Configuration.md  Database.md  Features.md  Home.md  Installation.md  Web-Dashboard.md  _Sidebar.md
