[package]
name = "clouder-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "clouder_core"
path = "src/lib.rs"

[dependencies]
sqlx = { workspace = true }
serenity = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
dotenvy = "0.15.7"
regex = "1.12.3"
reqwest = { workspace = true, features = ["json"] }
clouder-llm = { path = "../clouder-llm", optional = true }

[features]
default = []
llm = ["clouder-llm"]
