[package]
name = "clouder-web"
version = "0.2.0"
edition = "2024"

[lib]
name = "clouder_web"
path = "src/lib.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["json", "form"] }
anyhow = { workspace = true }
tracing = { workspace = true }
urlencoding = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
once_cell = { workspace = true }
axum-extra = { workspace = true }
clouder-core = { path = "../clouder-core" }
serenity = { workspace = true }
sqlx = { workspace = true }
cookie = "0.18.1"
