[package]
name = "clouder-web"
version = "0.2.0"
edition = "2024"
license = "MIT"

[lib]
name = "clouder_web"
path = "src/lib.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["json", "form"] }
anyhow = { workspace = true }
tracing = { workspace = true }
urlencoding = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
once_cell = { workspace = true }
axum-extra = { workspace = true }
clouder-core = { path = "../clouder-core" }
serenity = { workspace = true }
sqlx = { workspace = true }
cookie = "0.18.1"
hmac = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
hkdf = { workspace = true }
tower = { workspace = true }
tower_governor = { workspace = true }
tower-http = { workspace = true }
rand = { workspace = true }
