[package]
name = "clouder-shared"
version = "0.1.0"
edition = "2024"

[lib]
name = "clouder_shared"
path = "src/lib.rs"

[dependencies]
serenity = { version = "0.12.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "derive", "migrate", "macros"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"