[package]
name = "clouder-web"
version = "0.1.0"
edition = "2024"

[lib]
name = "clouder_web"
path = "src/lib.rs"

[dependencies]
axum = "0.8.8"
tokio = "1.48.0"
serde = "1.0.228"
serde_json = "1.0.148"
reqwest = { version = "0.12.28", features = ["json"] }
anyhow ="1.0.100"
tracing = "0.1.44"
dotenvy = "0.15.7"
urlencoding = "2.1.3"
uuid = "1.19.0"
chrono = { version = "0.4.42", features = ["serde"] }
once_cell = "1.21.3"
serenity = { version = "0.12.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "derive", "migrate", "macros"], default-features = false }
